--- a/1.html
+++ b/1.html
@@ -1,6 +1,13 @@
 <html>
 	<head>
 		<title></title>
+		<style>
+			div{
+				width: 200px;
+				height: 200px;
+				background-color: red;
+			}
+		</style>
 	</head>
 	<body>
 		<div>123456</div>
